--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-matplotlib==2.1.0
-numpy==1.13.3
-inflect==0.2.5
-librosa==0.6.0
-scipy==1.0.0
-Unidecode==1.0.22
+matplotlib==3.0.3
+numpy
+scipy
 pillow
+
+librosa==0.8.0
+pysoundfile==0.9.0.post1
+unidecode==1.3.4
+pypinyin==0.47.0
+inflect==5.6.2
+janome==0.4.2
+protobuf~=3.20.0
