--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,6 @@ FodyWeavers.xsd
 wav/*
 output/*
 ckpt.pt
+wenzhi-tricolourlovestory.tar.gz
+torch-1.12.1+cpu-cp37-cp37m-win_amd64.whl
+nohup.out
